--- a/lib/Input/_input.scss
+++ b/lib/Input/_input.scss
@@ -30,6 +30,22 @@
       color: red;
     }
 
+    .inp-required{
+      position: absolute;
+      background: #fff;
+      z-index: 100;
+      padding: 2px;
+      transform: translate(10px,-5px);
+
+      &.--focused{
+        color: #007bff;
+      }
+
+      &.--invalid{
+        color: red;
+      }
+    }
+
     .input-group {
       position: relative;
       display: flex;
@@ -59,6 +75,10 @@
       line-height: 1.5;
       color: #212529;
       white-space: nowrap;
+
+      &.--invalid {
+        border-color: red;
+      }
     }
 
     .form-control--start {
@@ -74,30 +94,6 @@
 
     }
 
-    .form-control--end.--invalid {
-      border-color: red;
-    }
-
-    .form-control--start.--invalid {
-      border-color: red;
-    }
-
-    .form-control {
-      display: block;
-      width: 100%;
-      height: auto;
-      padding: 0.5rem 1rem;
-      font-size: 0.95rem;
-      line-height: 1.5;
-      color: #495057;
-      background-color: #fff;
-      border: 1px solid #becad6;
-      font-weight: 300;
-      will-change: border-color, box-shadow;
-      border-radius: 0.375rem;
-      box-shadow: none;
-      transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
-    }
 
     .form-control.no-start-border {
       border-left: none;
@@ -111,13 +107,6 @@
       border-bottom-right-radius: 0;
     }
 
-    .form-control:focus {
-      color: #495057;
-      background-color: #fff;
-      border-color: #007bff;
-      box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-
-    }
 
     .form-control.--invalid {
       border-color: red;
@@ -156,9 +145,16 @@
         border-color: red;
         box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
+
+      &.--readonly{
+        border-color: #a5a5a5;
+        color: #a5a5a5;
+        cursor: default;
+      }
     }
 
     .form-control:focus {
+      outline: none;
       color: #495057;
       background-color: #fff;
       border-color: #007bff;
@@ -168,16 +164,74 @@
         border-color: red;
         box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
+
+      &.--readonly{
+        border-color: #a5a5a5;
+        color: #a5a5a5;
+        box-shadow: none;
+        cursor: default;
+      }
     }
 
     .form-control:hover {
+      outline: none;
       border-color: #8fa4b8;
 
       &.--invalid {
         border-color: red;
         box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
+      &.--readonly{
+        border-color: #a5a5a5;
+        color: #a5a5a5;
+        cursor: default;
+      }
     }
+
+  .input-message{
+    margin: 3px 0 0 0;
+    padding: 3px 5px;
+    border-radius: 0.25rem;
+    display: flex;
+    align-content: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    background: #f2dede;
+    color: red;
+
+    &.warning{
+      background: #faebcc;
+      color: orangered;
+    }
+
+    &.positive{
+      background: #dff0d8;
+      color: green;
+    }
+
+    &.info{
+      background: #d9edf7;
+      color: cornflowerblue;
+    }
+
+    &.suggestion{
+      background: lavender;
+      color: blueviolet;
+    }
+  }
+
+  .input-message-content{
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  .input-message-icon{
+    margin: auto 5px auto 0;
+  }
 
 }
 
