--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -12,14 +12,10 @@
       top: 0;
       left: 0;
       z-index: 1;
-      transform: translate(10px, 5px) scale(1);
+      transform: translate(14px, -14px) scale(0.75);
       background: #fff;
       padding: 4px;
       transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms, transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-    }
-
-    label.--moved {
-      transform: translate(14px, -14px) scale(0.75);
     }
 
     label.--focused {
@@ -151,6 +147,10 @@
       border-radius: 0.375rem;
       box-shadow: none;
       transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
+
+      .form-control:read-only {
+        background: #5a6169;
+      }
 
       .--invalid {
         border-color: red;
