--- a/src/InfoMessage/_infomessage.scss
+++ b/src/InfoMessage/_infomessage.scss
@@ -1,6 +1,6 @@
 
 .info-message {
-
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     margin: 3px 0 0 0;
     padding: 3px 5px;
     border-radius: 0.25rem;
