--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,4 @@
 @import "./LabelValue/labelvalue";
 @import "./InfoMessage/infomessage";
 @import "./RequiredLabel/requiredLabel";
+@import "./Attachment/attachment";
