--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -4,18 +4,19 @@
   position: relative;
 
     label.inp-label {
-      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       font-size: 1rem;
       font-weight: 300;
-      color: #5a6169;
+      color: rgb(90, 97, 105);
       position: absolute;
       top: 0;
       left: 0;
       z-index: 1;
-      transform: translate(14px, -14px) scale(0.75);
-      background: #fff;
-      padding: 4px;
-      transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms, transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+      transform: translate(14px, -12px) scale(0.75);
+      background: rgb(255, 255, 255);
+      padding: 0;
+      transition: color 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms, transform 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms;
+      margin: 0;
     }
 
     label.--focused {
@@ -168,6 +169,11 @@
         border-color: red;
         box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
+
+      &.--readonly {
+        border-color: #becad6;
+        box-shadow: none;
+      }
     }
 
     .form-control:hover {
@@ -178,6 +184,11 @@
         box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
     }
+
+
+  .--readonly {
+    color: #BDBDBD;
+  }
 
 }
 
