--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -13,19 +13,13 @@
       top: 0;
       left: 0;
       z-index: 1;
-      transform: translate(10px, 5px) scale(1);
       background: #fff;
-      padding: 4px;
-      //transform: translate(14px, -12px) scale(0.75);
-      //padding: 0;
+      transform: translate(14px, -12px) scale(0.75);
+      padding: 0;
       transition: color 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms, transform 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms;
       margin: 0;
-
     }
 
-    label.--moved {
-      transform: translate(14px, -14px) scale(0.75);
-    }
 
     label.--focused {
       color: #007bff;
