--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -108,7 +108,7 @@
 
     .form-control.--invalid {
       border-color: red;
-      box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+    //  box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
     }
 
     .form-control.no-start-border:focus,
@@ -145,7 +145,7 @@
 
       .--invalid {
         border-color: red;
-        box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+       // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
 
       &.--readonly{
@@ -165,7 +165,7 @@
 
       &.--invalid {
         border-color: red;
-        box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+       // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
 
 
@@ -188,7 +188,7 @@
 
       &.--invalid {
         border-color: red;
-        box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+       // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
       &.--readonly{
         border-color: #a5a5a5;
