--- a/lib/Badge/styles.scss
+++ b/lib/Badge/styles.scss
@@ -29,7 +29,7 @@
     background-color: var(--badge-background-color);
     color: var(--badge-color);
     top: 0;
-    right: 0;
+    right: 10px;
     transform: scale(1) translate(50%, -50%);
     transform-origin: 100% 0;
 
