--- a/lib/Badge/styles.scss
+++ b/lib/Badge/styles.scss
@@ -1,37 +1,30 @@
 .swf-badge-root {
   display: inline-flex;
-  position: relative;
-  flex-shrink: 0;
-  vertical-align: middle;
+  align-items: center;
+
+  .swf-button {
+    padding: 0;
+  }
 
   .swf-badge {
-    --badge-background-color: #4CAF50;
+    --badge-background-color: #4caf50;
     --badge-color: #fff;
-
     height: 20px;
     display: flex;
-    padding: 0 6px;
     z-index: 1;
-    position: absolute;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     font-size: 0.75rem;
     min-width: 20px;
     box-sizing: border-box;
     transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     align-items: center;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
     font-weight: 500;
     line-height: 1;
-    align-content: center;
+    place-content: center;
     border-radius: 10px;
-    flex-direction: row;
-    justify-content: center;
     background-color: var(--badge-background-color);
     color: var(--badge-color);
-    top: 0;
-    right: 10px;
-    transform: scale(1) translate(50%, -50%);
-    transform-origin: 100% 0;
 
     &.yellow{
       --badge-background-color: #fcd200;
