--- a/lib/LookupField/_look_up.scss
+++ b/lib/LookupField/_look_up.scss
@@ -83,6 +83,11 @@
     .form-control--start > * {
       margin: 3px;
     }
+
+    .swf-preloader .mock-container {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
 
