--- a/lib/FilterConditionBuilder/Components/FilterSaver/_filter_saver.scss
+++ b/lib/FilterConditionBuilder/Components/FilterSaver/_filter_saver.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-end;
     width: 100%;
+    margin-top: .5em;
 
     .popover-content {
         min-width: fit-content;
