--- a/lib/Modal/_modal.scss
+++ b/lib/Modal/_modal.scss
@@ -125,7 +125,7 @@
 
     &.--mobile {
       grid-template-areas:
-            "main-buttons additional-buttons"
+            "additional-buttons main-buttons"
             "header-content header-content";
     }
 
