--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -94,7 +94,12 @@
       border-radius: 0;
       border-color: #ffff;
 
+      &-desktop,
       &-mobile {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        border-color: #ffff;
         padding: calc(.5rem * var(--mv9-Tvprj--8tAf8z-1Jrjt, 1)) calc(.5rem * var(--mv9-Tvprj--9Apz8-1Jrjt, 1));
       }
     }
