--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -1,4 +1,6 @@
 .swf-modal-overlay {
+  --swf-modal-footer-height: 140px;
+
   position: fixed;
   width: 100%;
   height: 100%;
@@ -259,7 +261,7 @@
     }
 
     &.--active {
-      bottom: -80%;
+      bottom: calc(-100% + (var(--swf-modal-footer-height) + 1rem));
     }
   }
 
