--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -4,45 +4,44 @@
   position: relative;
 
 
-    .inp-label {
-      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-      font-size: 1rem;
-      font-weight: 300;
-      color: rgb(90, 97, 105);
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      background: #fff;
-      transform: translate(14px, -12px) scale(0.75);
-      padding: 0;
-      transition: color 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms, transform 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms;
-      margin: 0;
-    }
+  .inp-label {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-size: 1rem;
+    font-weight: 300;
+    color: rgb(90, 97, 105);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: #fff;
+    transform: translate(14px, -12px) scale(0.75);
+    padding: 0;
+    transition: color 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms, transform 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms;
+    margin: 0;
+  }
 
 
-    label.--focused {
-      color: #007bff;
-    }
+  label.--focused {
+    color: #007bff;
+  }
 
-    label.--readonly {
-      color: #BDBDBD;
-    }
+  label.--readonly {
+    color: #BDBDBD;
+  }
 
-    label.--invalid {
-      color: red;
-    }
+  label.--invalid {
+    color: red;
+  }
 
-      label{
-        padding-right: 3px;
-      }
+  label {
+    padding-right: 3px;
+  }
 
-      .inp-required{
-        transform: translateY(-50%);
+  .inp-required {
+    transform: translateY(-50%);
 
-      }
+  }
 
-    
 
   .input-group {
     position: relative;
@@ -53,149 +52,150 @@
   }
 
 
-    .input-group > .form-control {
-      position: relative;
-      flex: 1 1 auto;
-      width: 1%;
-      min-width: 0;
-      margin: 0;
-    }
+  .input-group > .form-control {
+    position: relative;
+    flex: 1 1 auto;
+    width: 1%;
+    min-width: 0;
+    margin: 0;
+  }
 
-    .form-control--start,
-    .form-control--end {
-      border: 1px solid #becad6;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      padding: .375rem .75rem;
-      font-size: 1rem;
-      font-weight: 400;
-      line-height: 1.5;
-      color: #212529;
-      white-space: nowrap;
+  .form-control--start,
+  .form-control--end {
+    border: 1px solid #becad6;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    white-space: nowrap;
 
-      &.--invalid {
-        border-color: red;
-      }
-    }
-
-    .form-control--start {
-      border-right: none;
-      border-top-left-radius: 0.375rem;
-      border-bottom-left-radius: 0.375rem;
-    }
-
-    .form-control--end {
-      border-left: none;
-      border-top-right-radius: 0.375rem;
-      border-bottom-right-radius: 0.375rem;
-
-    }
-
-
-    .form-control.no-start-border {
-      border-left: none;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-
-    .form-control.no-end-border {
-      border-right: none;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-
-
-    .form-control.--invalid {
+    &.--invalid {
       border-color: red;
+    }
+  }
+
+  .form-control--start {
+    border-right: none;
+    border-top-left-radius: 0.375rem;
+    border-bottom-left-radius: 0.375rem;
+  }
+
+  .form-control--end {
+    border-left: none;
+    border-top-right-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
+
+  }
+
+
+  .form-control.no-start-border {
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .form-control.no-end-border {
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+
+  .form-control.--invalid {
+    border-color: red;
     //  box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+  }
+
+  .form-control.no-start-border:focus,
+  .form-control.no-end-border:focus {
+    box-shadow: none;
+    border-color: #becad6;
+    outline: none;
+  }
+
+  .form-control:hover {
+    border-color: #8fa4b8;
+  }
+
+  .form-control {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 0.5rem 1rem;
+    font-size: 0.95rem;
+    line-height: 1.5;
+    margin: 0;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #becad6;
+    font-weight: 300;
+    will-change: border-color, box-shadow;
+    border-radius: 0.375rem;
+    box-shadow: none;
+    transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
+    -webkit-appearance: none;
+
+    .form-control:read-only {
+      background: #5a6169;
     }
 
-    .form-control.no-start-border:focus,
-    .form-control.no-end-border:focus {
+    .--invalid {
+      border-color: red;
+      // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+    }
+
+    &.--readonly {
+      border-color: #a5a5a5;
+      color: #a5a5a5;
+      cursor: default;
+    }
+  }
+
+  .form-control:focus {
+    outline: none;
+    color: #495057;
+    background-color: #fff;
+    border-color: #007bff;
+    box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+
+    &.--invalid {
+      border-color: red;
+      // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+    }
+
+
+    &.--readonly {
+      //border-color: #a5a5a5;
+      // color: #a5a5a5;
       box-shadow: none;
-      border-color: #becad6;
-      outline: none;
-    }
-
-    .form-control:hover {
-      border-color: #8fa4b8;
-    }
-
-    .form-control {
-      display: block;
-      width: 100%;
-      height: auto;
-      padding: 0.5rem 1rem;
-      font-size: 0.95rem;
-      line-height: 1.5;
-      margin: 0;
-      color: #495057;
-      background-color: #fff;
-      border: 1px solid #becad6;
-      font-weight: 300;
-      will-change: border-color, box-shadow;
-      border-radius: 0.375rem;
+      cursor: default;
+      border-color: rgb(190, 202, 214);
       box-shadow: none;
-      transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
-
-      .form-control:read-only {
-        background: #5a6169;
-      }
-
-      .--invalid {
-        border-color: red;
-       // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-      }
-
-      &.--readonly{
-        border-color: #a5a5a5;
-        color: #a5a5a5;
-        cursor: default;
-      }
-    }
-
-    .form-control:focus {
-      outline: none;
-      color: #495057;
-      background-color: #fff;
-      border-color: #007bff;
-      box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+      color: #BDBDBD;
       outline: none;
 
-      &.--invalid {
-        border-color: red;
-       // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-      }
+    }
+  }
 
+  .form-control:hover {
+    outline: none;
+    border-color: #8fa4b8;
 
-      &.--readonly{
-        //border-color: #a5a5a5;
-       // color: #a5a5a5;
-        box-shadow: none;
-        cursor: default;
-        border-color: rgb(190, 202, 214);
-        box-shadow: none;
-        color: #BDBDBD;
-        outline: none;
-
-      }
+    &.--invalid {
+      border-color: red;
+      // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
     }
 
-    .form-control:hover {
-      outline: none;
-      border-color: #8fa4b8;
-
-      &.--invalid {
-        border-color: red;
-       // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-      }
-      &.--readonly{
-        border-color: #a5a5a5;
-        color: #a5a5a5;
-        cursor: default;
-      }
+    &.--readonly {
+      border-color: #a5a5a5;
+      color: #a5a5a5;
+      cursor: default;
     }
+  }
 }
 
 
