--- a/lib/Modal/_modal.scss
+++ b/lib/Modal/_modal.scss
@@ -117,6 +117,9 @@
         padding: calc(.5rem * var(--mv9-Tvprj--8tAf8z-1Jrjt, 1)) calc(.5rem * var(--mv9-Tvprj--9Apz8-1Jrjt, 1));
         grid-template-rows: 10rem 1fr 0;
       }
+      &-mobile {
+        grid-template-rows: 10rem 1fr 0;
+      }
     }
 
   }
